add hero and fashion block

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,1 +1,16 @@
 // FOR FONTS
+@font-face {
+    font-family: 'Manrope';
+    src: url(../fonts/Manrope-Regular.woff2)format('woff2');
+    font-weight: 400;
+}
+@font-face {
+    font-family: 'Manrope';
+    src: url(../fonts/Manrope-Medium.woff2)format('woff2');
+    font-weight: 500;
+}
+@font-face {
+    font-family: 'Manrope';
+    src: url(../fonts/Manrope-SemiBold.woff2)format('woff2');
+    font-weight: 600;
+}
