--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,16 @@
 // COLORS
+%light-dark {
+    color: #262626;
+}
+%grey {
+    color: #656567;
+}
+%dark {
+    color: #1A1A1A;
+}
+%yellow-btn{
+    background-color: #FFD400;
+}
 
 // SIZES
 
