--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -1,1 +1,50 @@
 // FOR NAV
+
+nav{
+    border-bottom: 1px solid #F1F1F3;
+}
+.nav__wrapper{
+    padding: 18px 0px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav__list{
+    display: flex;
+    align-items: center;
+    gap: 0px 10px;
+
+   
+}
+.nav__action-list{
+    li:nth-of-type(1)  .nav__list-link{
+        background-color: #FFD400;
+        border: 1px solid transparent;
+        padding: 14px 12px 8px 12px;
+        img{
+            width: 20px;
+            height: 20px;
+        }
+    }
+    li:nth-of-type(2)  .nav__list-link{
+        padding: 12px 16px;
+    }
+}
+
+.nav__list-link{
+    font-family: 'Manrope';
+    font-weight: 500;
+    @extend %grey;
+    padding: 12px 20px;
+    border: 1px solid #F1F1F3;
+    border-radius: 100px;
+
+    &:hover{
+      @extend  %light-dark;
+
+      background-color: #F7F7F8;
+      border: 1px solid transparent;
+    }
+}
