--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
 @import "./blocks/hero";
 @import "./blocks/fashion";
 @import "./blocks/experience";
+@import "./blocks/love";
 
 .container {
     max-width:  1440px;
