finish question section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@
 @import "./blocks/fashion";
 @import "./blocks/experience";
 @import "./blocks/love";
+@import "./blocks/question";
 
 .container {
     max-width:  1440px;
