finish desktop ver

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,8 @@
 @import "./blocks/experience";
 @import "./blocks/love";
 @import "./blocks/question";
+@import "./blocks/seamless";
+@import "./blocks/footer";
 
 .container {
     max-width:  1440px;
