--- a/scss/blocks/_experience.scss
+++ b/scss/blocks/_experience.scss
@@ -36,10 +36,23 @@
     @extend %dark;
 }
 .ex__card__text{
-    font-family: Manrope;
+    font-family: 'Manrope';
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
     text-align: left;
-    color: #656567;
+    @extend %grey;
+}
+
+@media screen and (max-width: 1024px) {
+    .experience__cards{
+        grid-template-columns: 1fr 1fr;
+    }
+
+}
+@media screen and (max-width: 768px) {
+    .experience__cards{
+        grid-template-columns: 1fr;
+    }
+    
 }
