--- a/scss/blocks/_fashion.scss
+++ b/scss/blocks/_fashion.scss
@@ -6,6 +6,18 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 20px;
+}
+.fashion__subtitle{
+    display: none;
+    font-family: 'Manrope';
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 19.12px;
+    text-align: left;
+    color: #98989A;
+    text-transform: uppercase;
+    padding-bottom: 4px;
 }
 .fashion__title{
     font-family: 'Manrope';
@@ -36,6 +48,7 @@
     line-height: 21px;
     text-align: left;
     color: #262626;
+    white-space: nowrap;
 }
 .fashion__categories{
     margin: 60px 0px;
@@ -47,7 +60,11 @@
     border-style: solid;
     border-color: #F1F1F3;
 }
-
+.user__name-wrap{
+    display: flex;
+    flex-direction: column; 
+    padding: 0px 85px 0px 10px;
+}
 .categories__text{
     font-family: 'Manrope';
     font-size: 16px;
@@ -76,8 +93,12 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px 30px;
 }
+.fashion__card{
+    max-width: 298px;
+}
 .fashion__card-img{
-    position: relative;
+    position: relative;    
+    max-width: 298px;
 }
 .basket__btn{
     position: absolute;
@@ -102,4 +123,39 @@
     line-height: 24px;
     text-align: left;
     color: #4C4C4D;
+}
+
+@media screen and (max-width: 1440px) {
+    .fashion__cards{
+        width: 100%;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 20px 15px;
+    }
+}
+@media screen and (max-width: 1100px) {
+    .fashion{
+        .container{
+            padding: 0px 30px;
+        }
+    }
+}
+@media screen and (max-width: 1024px) {
+    .fashion__cards{
+        justify-content: center;
+        grid-template-columns: 298px 298px;
+        gap: 20px 10px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .fashion__subtitle{
+        display: block;
+    }
+    .fashion__cards{
+        grid-template-columns: 298px;
+        gap: 20px 16px;
+    }
+    .fashion__header{
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
