--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -30,12 +30,14 @@
     padding: 20px 0px 40px 0px;
 }
 .hero__action{
-    display: flex;
-    align-items: center;
-    gap: 8px;
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   max-width: 304px;
+   width: 100%;
+   gap: 8px;
 }
 .hero__btn{
-    padding: 14px 30px;
+    padding: 14px 0px;
     background-color: transparent;
     font-family: 'Manrope';
     font-weight: 600;
@@ -45,12 +47,13 @@
     border: 1px solid #F1F1F3;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 0px 6px;
 
-    &:hover{
+    &:first-child{
         @extend %yellow-btn;
-        border: 1px solid transparent;
     }
+
     img{
         width: 20px;
         height: 20px;
@@ -84,6 +87,9 @@
     @extend %dark;
     padding-bottom: 6px;
 }
+.hero__img{
+    object-fit: cover;
+}
 .static__text{
     font-family: 'Manrope';
     font-size: 16px;
@@ -91,4 +97,49 @@
     line-height: 24px;
     text-align: left;
     @extend %grey;
+}
+
+@media screen and (max-width: 1100px) {
+    .hero__wrapper{
+        flex-direction: column;
+    }
+    .hero__title{
+        text-align: center;
+        max-width: none;
+    }
+    .hero__content{
+        width: 100%;
+        max-width: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .hero__text{
+        text-align: center;
+    }
+    .hero__img{
+
+        img{
+            width: 100%;
+        }
+    }
+}
+@media screen and (max-width: 768px){
+    .hero__action{
+        width: 100%;
+    }
+    .hero__wrapper{
+        flex-direction: column;
+    }
+    .hero__title{
+        text-align: left;
+        max-width: none;
+    }
+    .hero__content{
+        width: 100%;
+        display: block;
+    }
+    .hero__text{
+        text-align: left;
+    }
 }
