--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,3 +20,18 @@
     margin: 0 auto;
     padding: 0 80px;
 }
+@media screen and (max-width: 1024px) {
+    .container{
+        padding: 0px 50px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .container{
+        padding: 0px 25px;
+    }
+}
+@media screen and (max-width: 525px) {
+    .container{
+        padding: 0px 16px;
+    }
+}
