--- a/scss/blocks/_seamless.scss
+++ b/scss/blocks/_seamless.scss
@@ -47,10 +47,27 @@
     color: #333333;
 }
 .content-text{
-    font-family: Manrope;
+    font-family: 'Manrope';
     font-size: 14px;
     font-weight: 400;
     line-height: 21px;
     text-align: left;
     color: #656567;
+}
+
+@media screen and (max-width: 1024px) {
+    .seamless__cards{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media screen and (max-width: 768px) {
+    .seamless__cards{
+        grid-template-columns: 1fr;
+    }
+    .seamless__card{
+        flex-direction: row;
+    }
+    .seamless__card-content{
+        padding-left: 20px;
+    }
 }
